<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent_add_school_container"
    android:fitsSystemWindows="true"
    tools:context=".school.view.AddSchoolActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    <ProgressBar
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/progress"
        android:visibility="invisible"
        android:indeterminate="true"
        android:layout_marginTop="-5dp"
        android:max="100"
        />
    <LinearLayout
        android:id="@+id/add_school_parent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/school_admin_margin_top"
        android:orientation="vertical">
        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_name"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/add_school_item_margin"
            android:layout_height="wrap_content"
            >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_name"
                android:hint="@string/name_hint_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_principle_name"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/add_school_item_margin"
            android:layout_height="wrap_content"
            >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_principle_name"
                android:hint="@string/principle_name_hint_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_address"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/add_school_item_margin"
            android:layout_height="wrap_content"
            >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_address"
                android:hint="@string/address_hint_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_location"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/add_school_item_margin"
            android:layout_height="wrap_content"
            >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_location"
                android:hint="@string/location_hint_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_specialization"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/add_school_item_margin"
            android:layout_height="wrap_content"
            >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_specialization"
                android:hint="@string/specialization_hint_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_affiliation"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/add_school_item_margin"
            android:layout_height="wrap_content"
            >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_affiliation"
                android:hint="@string/affiliation_hint_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_registration_no"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/add_school_item_margin"
            android:layout_height="wrap_content"
            >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_registration_no"
                android:hint="@string/reg_no_hint_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </android.support.design.widget.TextInputLayout>

            <Spinner
                android:id="@+id/sp_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/add_school_item_margin"
                style="@style/Widget.AppCompat.Spinner.Underlined"
                android:spinnerMode="dropdown"
                >
            </Spinner>


        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:visibility="gone"
            android:background="@android:color/darker_gray"/>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_fees"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/add_school_item_margin"
            android:layout_height="wrap_content"
            >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_fees"
                android:hint="@string/fees_hint_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_picture_logo"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/add_school_item_margin"
            android:layout_height="wrap_content"
            >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_picture_logo"
                android:hint="@string/picture_logo_hint_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableRight="@drawable/ic_attach_file_black_24dp"/>
        </android.support.design.widget.TextInputLayout>
        <ImageView
            android:id="@+id/img_school_logo"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:visibility="visible"/>

        <com.android.chalkboard.util.PNButton
            android:id="@+id/pnb_add_school"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/add_school_item_margin"
            android:text="@string/add_school_text"
            style="@style/WIDE_BUTTON"
            app:isPositive="true"
            />
    </LinearLayout>

    </RelativeLayout>

</ScrollView>